typesense/tests/derive/ui/duplicated_attribute.stderr
error: Original `#[typesense(...)]` attribute here.
 --> tests/derive/ui/duplicated_attribute.rs:7:5
  |
7 |     #[typesense(facet)]
  |     ^^^^^^^^^^^^^^^^^^^

error: Attribute is duplicated here.
 --> tests/derive/ui/duplicated_attribute.rs:8:5
  |
8 |     #[typesense(facet)]
  |     ^^^^^^^^^^^^^^^^^^^
